--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                     <h2>Traitement de tout sort de nuisible 7j/7</h2>
                     <p>Votre confort est notre but nous nous déplaçons partout dans le Nord - Aisne - Oise - Pas-de-calais - Somme.
 
-                        Intervention 24/24 7/7 Rapide est efficace n'histez pas de prendre <a href="#contact">contact</a>et dite Nous votre problem ou appelez nous direct à <span class="numero">06 58 01 10 58</span></p>
+                        Intervention 24/24 7j/7 Rapide et efficace n'hésitez pas de prendre <a href="#contact">contact</a>avec nous et dites-nous votre problème ou appelez-nous direct à <span class="numero">06 58 01 10 58</span></p>
                     <div class="devis">
                         <a href="#devis">Faire un DEVIS</a>
                     </div>
@@ -155,7 +155,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                     <div class="content" data-info="div-1">
                         <h2>Maîtrises des nuisibles</h2>
                         <p>Il s'agit de l'un des services les plus demandés,
-                            <span class="dots">...</span></span> <span class="text-more-less hide" id="span-1">la maîtrise des nuisibles (rats, insectes, pigeons...).Ce service est essentiel pour nos clients et nous  garantissons sa qualité pour un meilleur quotidien.</span> </p>
+                            <span class="dots">...</span></span> <span class="text-more-less hide" id="span-1">la maîtrise des nuisibles (rats, insectes, pigeons...).Ce service est essentiel pour nos clients et nous garantissons sa qualité pour un meilleur quotidien.</span> </p>
                         <button onclick="readMore('div-1');" class="more-btn">Lire Plus</button>
                     </div>
                 </div>
@@ -191,7 +191,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                     <div class="content" data-info="div-5">
                         <h2>Maîtrises des nuisibles</h2>
                         <p>Il s'agit de l'un des services les plus demandés,
-                            <span class="dots">...</span></span> <span class="text-more-less hide" id="span-1">la maîtrise des nuisibles (rats, insectes, pigeons...).Ce service est essentiel pour nos clients et nous  garantissons sa qualité pour un meilleur quotidien.</span> </p>
+                            <span class="dots">...</span></span> <span class="text-more-less hide" id="span-1">la maîtrise des nuisibles (rats, insectes, pigeons...).Ce service est essentiel pour nos clients et nous garantissons sa qualité pour un meilleur quotidien.</span> </p>
                         <button onclick="readMore('div-5');" class="more-btn">Lire Plus</button>
                     </div>
                 </div>
@@ -200,7 +200,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                     <div class="content" data-info="div-6">
                         <h2>Maîtrises des nuisibles</h2>
                         <p>Il s'agit de l'un des services les plus demandés,
-                            <span class="dots">...</span></span> <span class="text-more-less hide" id="span-1">la maîtrise des nuisibles (rats, insectes, pigeons...).Ce service est essentiel pour nos clients et nous  garantissons sa qualité pour un meilleur quotidien.</span> </p>
+                            <span class="dots">...</span></span> <span class="text-more-less hide" id="span-1">la maîtrise des nuisibles (rats, insectes, pigeons...).Ce service est essentiel pour nos clients et nous garantissons sa qualité pour un meilleur quotidien.</span> </p>
                         <button onclick="readMore('div-6');" class="more-btn">Lire Plus</button>
                     </div>
                 </div>
@@ -209,7 +209,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                     <div class="content" data-info="div-7">
                         <h2>Maîtrises des nuisibles</h2>
                         <p>Il s'agit de l'un des services les plus demandés,
-                            <span class="dots">...</span></span> <span class="text-more-less hide" id="span-1">la maîtrise des nuisibles (rats, insectes, pigeons...).Ce service est essentiel pour nos clients et nous  garantissons sa qualité pour un meilleur quotidien.</span> </p>
+                            <span class="dots">...</span></span> <span class="text-more-less hide" id="span-1">la maîtrise des nuisibles (rats, insectes, pigeons...).Ce service est essentiel pour nos clients et nous garantissons sa qualité pour un meilleur quotidien.</span> </p>
                         <button onclick="readMore('div-7');" class="more-btn">Lire Plus</button>
                     </div>
                 </div>
@@ -218,7 +218,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                     <div class="content" data-info="div-8">
                         <h2>Maîtrises des nuisibles</h2>
                         <p>Il s'agit de l'un des services les plus demandés,
-                            <span class="dots">...</span></span> <span class="text-more-less hide" id="span-1">la maîtrise des nuisibles (rats, insectes, pigeons...).Ce service est essentiel pour nos clients et nous  garantissons sa qualité pour un meilleur quotidien.</span> </p>
+                            <span class="dots">...</span></span> <span class="text-more-less hide" id="span-1">la maîtrise des nuisibles (rats, insectes, pigeons...).Ce service est essentiel pour nos clients et nous garantissons sa qualité pour un meilleur quotidien.</span> </p>
                         <button onclick="readMore('div-8');" class="more-btn">Lire Plus</button>
                     </div>
                 </div>
@@ -283,7 +283,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                         <br><br>
 
                         <div class="checbox">
-                        <input type="checkbox" id="newslettre">Recevoir notre newsletters et les dernières options
+                        <input type="checkbox" id="newslettre">Recevoir nos newsletters et les dernières options
                         <br><br>
                         </div>
                         <textarea class="msg" name="message" id="text" placeholder="Décrivez-nous votre problème"></textarea>
@@ -299,7 +299,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
             <div class="container">
                 <div class="content">
                     <img src="./Images/walistop-logo.png" alt="">
-                    <p>Vous pouvez nous suivre sur les réseaux sociaux et Nous repondons à toute vos questions</p>
+                    <p>Vous pouvez nous suivre sur les réseaux sociaux et Nous répondons à toutes vos questions</p>
                     <div class="social">
                         <a href="http://facebook.com/" target="_blank"><i class="fa-brands fa-facebook fa-2x"></i></a>
                         <a href="http://twitter.com/" target="_blank"><i class="fa-brands fa-twitter fa-2x"></i></a>
