--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                     <h2>Traitement de tout sort de nuisible 7j/7</h2>
                     <p>Votre confort est notre but nous nous déplaçons partout dans le Nord - Aisne - Oise - Pas-de-calais - Somme.
 
-                        Intervention 24/24 7j/7 Rapide et efficace n'hésitez pas de prendre <a href="#contact">contact</a>avec nous et dites-nous votre problème ou appelez-nous direct à <span class="numero">06 58 01 10 58</span></p>
+                        Intervention 24/24 7/7 Rapide est efficace n'histez pas de prendre <a href="#contact">contact</a>et dite Nous votre problem ou appelez nous direct à <span class="numero">06 58 01 10 58</span></p>
                     <div class="devis">
                         <a href="#devis">Faire un DEVIS</a>
                     </div>
@@ -151,28 +151,48 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
             <h2 class="title">À PROPOS DE NOUS</h2>
             <div class="container">
                 <div class="box">
-                    <img class="image-1" src="./Images/insects.png" alt="" />
+                    <img class="image-1" src="./Images/punaise de lit.png" alt="" />
                     <div class="content" data-info="div-1">
-                        <h2>Maîtrises des nuisibles</h2>
-                        <p>Il s'agit de l'un des services les plus demandés,
-                            <span class="dots">...</span></span> <span class="text-more-less hide" id="span-1">la maîtrise des nuisibles (rats, insectes, pigeons...).Ce service est essentiel pour nos clients et nous garantissons sa qualité pour un meilleur quotidien.</span> </p>
+                        <h2>Elimination des insectes rampants</h2>
+                        <p>En cas d’infestation parasitaire, d’invasion d’insectes comme les
+                            puces
+                            <span class="dots">...</span></span> <span class="text-more-less hide" id="span-1">punaises de lit, cafards
+                                et autres insectes rampants et arboricoles, que vous soyez un
+                                particulier ou professionnel,
+                                notre entreprise trouvera toujours
+                                réponse à votre problème,
+                                à l’aide de produits efficaces
+                                et de techniciens qualifiés.
+                                ​</span> </p>
                         <button onclick="readMore('div-1');" class="more-btn">Lire Plus</button>
                     </div>
                 </div>
                 <div class="box">
-                    <img class="image-2" src="./Images/a propos_2.jpg" alt="" />
+                    <img class="image-2" src="./Images/about-2.png" alt="" />
                     <div class="content" data-info="div-2">
-                        <h2>Traitement de mérule (champignons)</h2>
-                        <p>Tous nos services, et celui-ci en particulier,<span class="dots">...</span></span><span class="text-more-less hide" id="Span-2"> ont été conçus pour vous faciliter la vie.
-                        Vous pouvez compter sur nous pour vous en débarrasser. </span></p>
+                        <h2>Eradication des insectes volantsination</h2>
+                        <p>Ces dernières années ont été marquées
+                            par une importante expansion des
+                            frelons asiatiques,<span class="dots">...</span></span><span class="text-more-less hide" id="Span-2"> des guêpes
+                                et d’insectes s’attaquant aux denrées
+                                stockées.
+                                Connaissant les risques causés
+                                par ces derniers, Walistop Nuisibles
+                                s’engage dans une lutte raisonnée et
+                                efficace en intervant dans les plus brefs
+                                délais.</span></p>
                         <button onclick="readMore('div-2');" class="more-btn">Lire Plus</button>
                     </div>
                 </div>
                 <div class="box">
-                    <img class="image-3" src="./Images/fumigation.jpg" alt="" />
+                    <img class="image-3" src="./Images/about-3.png" alt="" />
                     <div class="content" data-info="div-3">
-                        <h2>Désinfection / Décontamination</h2>
-                        <p>Ce service est essentiel pour nos clients et<span class="dots">...</span></span> <span class="text-more-less hide" id="Span-3"> nous garantissons sa qualité. Avec ce service, les choses seront simples, plus propres.</span></p>
+                        <h2>Dératiseur professionnel</h2>
+                        <p>Vous entendez des bruits dans vos
+                            cloisons ? Dans les combles de votre grenier ?
+                            Votre jardin,<span class="dots">...</span></span> <span class="text-more-less hide" id="Span-3">et poulailler sont en proie
+                                aux dégradations dues à la présence
+                                de rats et de souris ? Vos locaux et/ou entrepôts sont pris d’assaut par les rongeurs ? Nos dératiseurs ont les méthodes et l’expertise pour garder la population de rongeurs sous contrôle.</span></p>
                         <button onclick="readMore('div-3');" class="more-btn">Lire Plus</button>
                     </div>
                 </div>
@@ -187,41 +207,30 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                         </div>
                 </div>
                 <div class="box">
-                    <img class="image-1" src="./Images/puce.png" alt="" />
+                    <img class="image-1" src="./Images/about-4.png" alt="" />
                     <div class="content" data-info="div-5">
-                        <h2>Maîtrises des nuisibles</h2>
-                        <p>Il s'agit de l'un des services les plus demandés,
-                            <span class="dots">...</span></span> <span class="text-more-less hide" id="span-1">la maîtrise des nuisibles (rats, insectes, pigeons...).Ce service est essentiel pour nos clients et nous garantissons sa qualité pour un meilleur quotidien.</span> </p>
+                        <h2>Traitement du bois</h2>
+                        <p>Les insectes xylophages (les capricornes de maison, les termites, les vrillettes,
+                            <span class="dots">...</span></span> <span class="text-more-less hide" id="span-1">représentent un réel danger pour la structure de votre habitation ainsi que pour
+                                tout le mobilier manufacturé en bois. Walistop Nuisibles propose des traitements par formulation chimique, par perçage injection ou pulvérisation afin de protéger vos biens.</span> </p>
                         <button onclick="readMore('div-5');" class="more-btn">Lire Plus</button>
                     </div>
                 </div>
                 <div class="box">
-                    <img class="image-1" src="./Images/cafard.png" alt="" />
+                    <img class="image-1" src="./Images/about-5.png" alt="" />
                     <div class="content" data-info="div-6">
-                        <h2>Maîtrises des nuisibles</h2>
-                        <p>Il s'agit de l'un des services les plus demandés,
-                            <span class="dots">...</span></span> <span class="text-more-less hide" id="span-1">la maîtrise des nuisibles (rats, insectes, pigeons...).Ce service est essentiel pour nos clients et nous garantissons sa qualité pour un meilleur quotidien.</span> </p>
+                        <h2>La désinfection</h2>
+                        <p>Suite à un sinistre, ou à une infestation de nuisibles,
+                            <span class="dots">...</span></span> <span class="text-more-less hide" id="span-1">il peut être nécessaire
+                                de réaliser une désinfection avec
+                                des produits homologués et certifiés.
+                                Notre entreprise dispose également
+                                de produits compatibles avec les
+                                normes d’hygiène COVID 19.</span> </p>
                         <button onclick="readMore('div-6');" class="more-btn">Lire Plus</button>
                     </div>
                 </div>
-                <div class="box">
-                    <img class="image-1" src="./Images/mouch.png    " alt="" />
-                    <div class="content" data-info="div-7">
-                        <h2>Maîtrises des nuisibles</h2>
-                        <p>Il s'agit de l'un des services les plus demandés,
-                            <span class="dots">...</span></span> <span class="text-more-less hide" id="span-1">la maîtrise des nuisibles (rats, insectes, pigeons...).Ce service est essentiel pour nos clients et nous garantissons sa qualité pour un meilleur quotidien.</span> </p>
-                        <button onclick="readMore('div-7');" class="more-btn">Lire Plus</button>
-                    </div>
-                </div>
-                <div class="box">
-                    <img class="image-1" src="./Images/punaise de lit.png" alt="" />
-                    <div class="content" data-info="div-8">
-                        <h2>Maîtrises des nuisibles</h2>
-                        <p>Il s'agit de l'un des services les plus demandés,
-                            <span class="dots">...</span></span> <span class="text-more-less hide" id="span-1">la maîtrise des nuisibles (rats, insectes, pigeons...).Ce service est essentiel pour nos clients et nous garantissons sa qualité pour un meilleur quotidien.</span> </p>
-                        <button onclick="readMore('div-8');" class="more-btn">Lire Plus</button>
-                    </div>
-                </div>
+
             </div>
         </div>
         <!-- End About Us -->
@@ -238,6 +247,63 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
             </div>
         </div>
         <!-- End Devis  -->
+        <!--Start Services-->
+        <div class="services">
+            <div class="services-title">
+                <h2>Nos Services</h2>
+                <p>Exterminateur de nuisibles :
+                    dératisation, désinsectisation et désinfection</p>
+            </div>
+            <div class="services-boxs">
+                <div class="services-box">
+                        <span>Lutte nuisibles</span>
+                        <span>Destruction de nuisibles</span>
+                        <span>Traitement mouches</span>
+                        <span>Diagnostic parasitaire</span>
+                        <span>Destruction de nid de frelons asiatique</span>
+
+                        <span>Destruction de nid de guêpes</span>
+                        <span>Piégeage capture fouine</span>
+                        <span>Désinsectisation</span>
+                        <span>Traitement de punaises de lit</span>
+                        <span>Désinsectisation de puces</span>
+
+
+                        <span>Désinsectisation de cafards</span>
+                        <span>Désinsectisation de fourmis</span>
+                        <span>Services Anti Nuisibles</span>
+                        <span>Régulation rongeurs</span>
+                        <span>Désourisation</span>
+
+
+                        <span>Protection sous tuils</span>
+                        <span>Traitement des végétaux</span>
+                        <span>Traitement par le chaud/froid</span>
+                        <span>Piégeage de chenilles processionnaires</span>
+                        <span>Désinsectisation moustiques</span>
+
+
+                        <span>Effarouchement et protection contre les volatiles</span>
+                        <span>Fumigation</span>
+                        <span>Dératisateur</span>
+                        <span>Désinfection</span>
+                        <span>Désinfection des locaux</span>
+
+
+                        <span>Désinfection des bâtiments d'élevage</span>
+                        <span>Désinfection covid 19</span>
+                        <span>Lutte contre rats</span>
+                        <span>Dératisateur</span>
+                        <span>Traitement charpente par injection</span>
+
+                        <span>Traitement insecte xylophages</span>
+                        <span>Piégeage termites</span>
+                        <span>Traitement capricornes</span>
+                        <span>Traitement vrillettes</span>
+                </div>
+            </div>
+        </div>
+        <!--End Services-->
         <!-- Start Contact -->
         <div class="contact" id="contact">
             <div class="container">
@@ -283,7 +349,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                         <br><br>
 
                         <div class="checbox">
-                        <input type="checkbox" id="newslettre">Recevoir nos newsletters et les dernières options
+                        <input type="checkbox" id="newslettre">Recevoir notre newsletters et les dernières options
                         <br><br>
                         </div>
                         <textarea class="msg" name="message" id="text" placeholder="Décrivez-nous votre problème"></textarea>
@@ -298,8 +364,8 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
         <div class="footer">
             <div class="container">
                 <div class="content">
-                    <img src="./Images/walistop-logo.png" alt="">
-                    <p>Vous pouvez nous suivre sur les réseaux sociaux et Nous répondons à toutes vos questions</p>
+                    <img src="/Images/walistop-logo.png" alt="">
+                    <p>Vous pouvez nous suivre sur les réseaux sociaux et Nous repondons à toute vos questions</p>
                     <div class="social">
                         <a href="http://facebook.com/" target="_blank"><i class="fa-brands fa-facebook fa-2x"></i></a>
                         <a href="http://twitter.com/" target="_blank"><i class="fa-brands fa-twitter fa-2x"></i></a>
