--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name=" description" content="nuisible , insects, and ronger">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name=" author" content=" walistop nuisible"/>
+    <meta name=" copyright" content=" walistop nuisible"/>
     <link rel="stylesheet" href="./Css/normalize.css"type="text/css">
     <link rel="stylesheet" href="./Css/all.min.css"type="text/css">
     <link rel="stylesheet" href="./Css/all.css" type="text/css">
@@ -65,41 +68,19 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
             </div>
         </div>
         <!-- End Header -->
-        <!-- Start Landing -->
-        <!-- <div class="landing">
-            <div class="container">
-                <div class="slider-box">
-                    <div class="slider-number" id="slider-number"></div>
-                    <img src="./Images/slider_1.jpg"alt="">
-                    <img src="./Images/slider_2.jpg"alt="">
-                    <img src="./Images/Slider_3.jpg"alt="">
-                    <img src="./Images/slider_4.png"alt="">
-                    <img src="./Images/slider_5.png"alt="">
-                    <img src="./Images/Slider_6.jpg"alt="">
-                </div>
-                <div class="slider-controls">
-                    <span id="prev" class="prev">Precedent</span>
-                    <span id="indicator" class="indicator">
-                    </span>
-                    <span id="next" class="next">Suivant</span>
-                </div>
-            </div>
-        </div> -->
-        <!-- End Landing -->
         <!--Start New Landing-->
         <div class="landing">
             <div class="container">
                 <div class="content">
                     <h2>Traitement de tout sort de nuisible 7j/7</h2>
                     <p>Votre confort est notre but nous nous déplaçons partout dans le Nord - Aisne - Oise - Pas-de-calais - Somme.
-
-                        Intervention 24/24 7/7 Rapide est efficace n'histez pas de prendre <a href="#contact">contact</a>et dite Nous votre problem ou appelez nous direct à <span class="numero">06 58 01 10 58</span></p>
+                        Intervention 24h/24 7/7 Rapide est efficace n'histez pas de prendre <a href="#contact">contact</a>et dite Nous votre problem ou appelez nous direct à <span class="numero">06 58 01 10 58</span></p>
                     <div class="devis">
                         <a href="#devis">Faire un DEVIS</a>
                     </div>
                 </div>
                 <div class="landing-image">
-                    <img src="./Images/new-landing.jpg" alt="landing">
+                    <img src="./Images/walistop-landing.png" alt="landing">
                 </div>
             </div>
         </div>
@@ -151,7 +132,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
             <h2 class="title">À PROPOS DE NOUS</h2>
             <div class="container">
                 <div class="box">
-                    <img class="image-1" src="./Images/punaise de lit.png" alt="" />
+                    <img class="image-1" src="./Images/punasie de lit 2.png" alt="" />
                     <div class="content" data-info="div-1">
                         <h2>Elimination des insectes rampants</h2>
                         <p>En cas d’infestation parasitaire, d’invasion d’insectes comme les
@@ -163,7 +144,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                                 réponse à votre problème,
                                 à l’aide de produits efficaces
                                 et de techniciens qualifiés.
-                                ​</span> </p>
+                            </span> </p>
                         <button onclick="readMore('div-1');" class="more-btn">Lire Plus</button>
                     </div>
                 </div>
@@ -201,7 +182,6 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                     <div class="content" data-info="div-4">
                         <h2>Horaires d'ouverture</h2>
                         <p>Pour votre confort nous nous déplaçons à<span class="dots">...</span></span> <span class="text-more-less hide" id="Span-4"> toute heure de la journée et de la soirée.
-
                             Pour tout renseignement ou prise de rendez-vous, merci de nous contacter directement au 0658011058 </span></p>
                             <button onclick="readMore('div-4');" class="more-btn">Lire Plus</button>
                         </div>
@@ -230,7 +210,6 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                         <button onclick="readMore('div-6');" class="more-btn">Lire Plus</button>
                     </div>
                 </div>
-
             </div>
         </div>
         <!-- End About Us -->
@@ -240,7 +219,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                 <div class="content">
                     <button class="get-devis" type="submit" id="get-devis">Devis gratuit</button>
                     <div class="info active">
-                        <h3>Devis téléphonique gratuit pour vos</h3>
+                        <h3>Devis téléphonique gratuit pour vous</h3>
                         <p>Nous vous proposerons un devis gratuit correspondant à votre situation et pour faire de notre mieux, pour cela nous avons besoin d'avoir plus de précisions vous pouvez nous appeler au <strong>06 58 01 10 58</strong> nous sommes disponibles 24h/24h, 7j/7j. Merci pour votre intérêt notre but est de vous satisfaire</p>
                     </div>
                 </div>
@@ -261,41 +240,31 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                         <span>Traitement mouches</span>
                         <span>Diagnostic parasitaire</span>
                         <span>Destruction de nid de frelons asiatique</span>
-
                         <span>Destruction de nid de guêpes</span>
                         <span>Piégeage capture fouine</span>
                         <span>Désinsectisation</span>
                         <span>Traitement de punaises de lit</span>
                         <span>Désinsectisation de puces</span>
-
-
                         <span>Désinsectisation de cafards</span>
                         <span>Désinsectisation de fourmis</span>
                         <span>Services Anti Nuisibles</span>
                         <span>Régulation rongeurs</span>
                         <span>Désourisation</span>
-
-
                         <span>Protection sous tuils</span>
                         <span>Traitement des végétaux</span>
                         <span>Traitement par le chaud/froid</span>
                         <span>Piégeage de chenilles processionnaires</span>
                         <span>Désinsectisation moustiques</span>
-
-
                         <span>Effarouchement et protection contre les volatiles</span>
                         <span>Fumigation</span>
                         <span>Dératisateur</span>
                         <span>Désinfection</span>
                         <span>Désinfection des locaux</span>
-
-
                         <span>Désinfection des bâtiments d'élevage</span>
                         <span>Désinfection covid 19</span>
                         <span>Lutte contre rats</span>
                         <span>Dératisateur</span>
                         <span>Traitement charpente par injection</span>
-
                         <span>Traitement insecte xylophages</span>
                         <span>Piégeage termites</span>
                         <span>Traitement capricornes</span>
@@ -310,15 +279,11 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                 <div class="contact-form">
                     <form  >
                         <h2>Entrez Votre Contact Information</h2>
-
                         <i class="fa-solid fa-user"></i>
                         <input class="user" type="text" name="last-name"  id="last-name" placeholder="Votre Nom" required>
-
                         <br><br>
-
                         <i class="fa-solid fa-user"></i>
                         <input class="user" type="text" name="first-name"  id="first-name" placeholder="Votre Prenom" required>
-
                         <br><br>
                         <div class="radio">
                             <i class="fa-solid fa-venus-mars"></i>
@@ -326,28 +291,21 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                         <input  type="radio" name="genre" id="féminine" value="féminine">Féminine
                         </div>
                         <br><br>
-
                         <i class="fa-solid fa-envelope"></i>
                         <input class="mail" type="email" name="mail" id="email" placeholder="Votre Addresse Mail"  required>
-
                         <br><br>
-
                         <i class="fa-solid fa-phone"></i>
                         <input class="phone" type="text" name="phone" id="phone" placeholder="Votre Numéro de Téléphone"  required>
-
                         <br><br>
                         <i class="fa-solid fa-house"></i>
                         <input class="address" type="text" id="address" name="address" placeholder="Votre Addresse" >
-
                         &nbsp;&nbsp;&nbsp;
-
                         <select id="country" name="country" style="margin: 25px 35px;">
                             <option disabled selected value>-- Choisir Votre Pays --</option>
                             <option value="france">FRANCE</option>
                             <option value="belgique">BELGIQUE</option>
                         </select>
                         <br><br>
-
                         <div class="checbox">
                         <input type="checkbox" id="newslettre">Recevoir notre newsletters et les dernières options
                         <br><br>
@@ -364,7 +322,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
         <div class="footer">
             <div class="container">
                 <div class="content">
-                    <img src="./Images/walistop-logo.png" alt="">
+                    <img src="/Images/walistop-logo.png" alt="">
                     <p>Vous pouvez nous suivre sur les réseaux sociaux et Nous repondons à toute vos questions</p>
                     <div class="social">
                         <a href="http://facebook.com/" target="_blank"><i class="fa-brands fa-facebook fa-2x"></i></a>
@@ -374,7 +332,6 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                     </div>
                 </div>
                 <div class="details">
-                    Adresse : <span>4 Rue Jacques prévert Herin 59195</span>
                     Téléphone : <span>+33 06 58 01 10 58</span>
                     Email : <span>walistopnuisible@gmail.com</span>
                 </div>
@@ -382,8 +339,6 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
             </div>
         </div>
         <!-- End Footer -->
-
-
     <script type="text/javascript" src="./Js/main.js"></script>
 </body>
 </html>
