--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                 <div class="content">
                     <h2>Traitement de tout sort de nuisible 7j/7</h2>
                     <p>Votre confort est notre but nous nous déplaçons partout dans le Nord - Aisne - Oise - Pas-de-calais - Somme.
-                        Intervention 24h/24 7/7 Rapide est efficace n'histez pas de prendre <a href="#contact">contact</a>et dite Nous votre problem ou appelez nous direct à <span class="numero">06 58 01 10 58</span></p>
+                        Intervention 24h/24 7j/7 Rapide est efficace n'histez pas de prendre <a href="#contact">contact</a>et dite Nous votre problème ou appelez-nous direct à <span class="numero"> 06 58 01 10 58 </span></p>
                     <div class="devis">
                         <a href="#devis">Faire un DEVIS</a>
                     </div>
@@ -92,7 +92,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                     <i class="fa-solid fa-house-chimney fa-2x"></i>
                     <div class="info">
                         <h3>Efficacité</h3>
-                        <p>Nous pouvons vous assurer que notre traitement est efficace à 100% et la fin de vos ennuis</p>
+                        <p>Nous pouvons vous assurer que notre traitement est efficace à 100% et la fin de vos ennuis.</p>
                         <span> 5/5 &#11088; &#11088; &#11088; &#11088; &#11088;</span>
                     </div>
                     <img src="./Images/efficacity.png" alt="photo">
@@ -192,7 +192,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                         <h2>Traitement du bois</h2>
                         <p>Les insectes xylophages (les capricornes de maison, les termites, les vrillettes,
                             <span class="dots">...</span></span> <span class="text-more-less hide" id="span-1">représentent un réel danger pour la structure de votre habitation ainsi que pour
-                                tout le mobilier manufacturé en bois. Walistop Nuisibles propose des traitements par formulation chimique, par perçage injection ou pulvérisation afin de protéger vos biens.</span> </p>
+                                Tout le mobilier manufacturé en bois. Walistop Nuisibles propose des traitements par formulation chimique, par perçage injection ou pulvérisation afin de protéger vos biens.</span> </p>
                         <button onclick="readMore('div-5');" class="more-btn">Lire Plus</button>
                     </div>
                 </div>
@@ -250,7 +250,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
                         <span>Services Anti Nuisibles</span>
                         <span>Régulation rongeurs</span>
                         <span>Désourisation</span>
-                        <span>Protection sous tuils</span>
+                        <span>Protection sous tuiles</span>
                         <span>Traitement des végétaux</span>
                         <span>Traitement par le chaud/froid</span>
                         <span>Piégeage de chenilles processionnaires</span>
@@ -323,7 +323,7 @@ mail('husseinyazane19@gmail.com', 'Contact Form', $content, $headers);
             <div class="container">
                 <div class="content">
                     <img src="/Images/walistop-logo.png" alt="">
-                    <p>Vous pouvez nous suivre sur les réseaux sociaux et Nous repondons à toute vos questions</p>
+                    <p>Vous pouvez nous suivre sur les réseaux sociaux et Nous répondons à toutes vos questions</p>
                     <div class="social">
                         <a href="http://facebook.com/" target="_blank"><i class="fa-brands fa-facebook fa-2x"></i></a>
                         <a href="http://twitter.com/" target="_blank"><i class="fa-brands fa-twitter fa-2x"></i></a>
